--- a/src/index.css
+++ b/src/index.css
@@ -224,10 +224,10 @@ hr {
 }
 a {text-decoration:none;}
 [onClick], [data-link] {cursor: pointer;}
-textarea:focus, input:focus, select:focus{
-  outline: none !important;
+a:focus, button:focus, input:focus, textarea:focus, select:focus {
+    outline: none !important;
 }
-
+    
 /****** Remove tap highlight & style default on iOS ******/
 body.safari input, body.safari textarea, body.safari button, body.safari select, body.safari label, body.safari a {
     -webkit-tap-highlight-color: transparent; -webkit-appearance: none;
